create api players
